Changed the log event list to be implemented as an arraylist greatly speeding up the performance of playback